--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "exceljs": "^4.4.0",
+    "formidable": "^3.5.1",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
     "react": "^18",
