--- a/package.json
+++ b/package.json
@@ -12,14 +12,19 @@
     "@prisma/client": "^5.18.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "core-js": "^3.38.1",
     "exceljs": "^4.4.0",
     "formidable": "^3.5.1",
+    "lottie-react": "^2.4.0",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
+    "react-lottie": "^1.2.4",
     "slugify": "^1.6.6",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
